2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (read_segment): Renome unreachable code.
	* grub-core/net/ip.c (grub_net_recv_ip4_packets): Likewise.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/regex.h (re_pattern_buffer): Declare buffer as
	re_dfa_t to avoid breaking alignment invariants.
	* grub-core/gnulib/regex_internal.h (re_dfa_t): Moved to ...
	* grub-core/gnulib/regex.h (re_dfa_t): ... here.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Fix printf.
	* grub-core/loader/ia64/efi/linux.c (grub_cmd_fpswa): Likewise.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/qemu/mmap.c (grub_machine_mmap_init):
	Fix declaration.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/ehci.c (grub_ehci_ehcc_read32): Restructure to
	conserve alignment invariants.
	(grub_ehci_ehcc_read16): Likewise.
	(grub_ehci_oper_read32): Likewise.
	(grub_ehci_oper_write32): Likewise.
	(grub_ehci_pci_iter) [!GRUB_HAVE_UNALIGNED_ACCESS]: Check alignment.
	Conserve alignment invariants.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/full.c (grub_emu_post_init): Remove raid reinit.
	* include/grub/disk.h [GRUB_MACHINE_EMU]: Remove now useless LVM/RAID
	declarations.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostfs.c (grub_hostfs_close):
	Remove unused variable.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/loadcore_common.c (grub_efiemu_loadcore_load):
	Remove set in if.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/net.h: Remove double declarations.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove "payload" command in ia64 Linux loader since I couldn't
	find any evidence of it being used for anything.
	Replace "relocate" command with an environment variable
