@@ -90,7 +90,9 @@ grub_multiboot_set_video_mode (void)
   grub_err_t err;
   const char *modevar;
 
-  if (accepts_video || !GRUB_MACHINE_HAS_VGA_TEXT)
+#if GRUB_MACHINE_HAS_VGA_TEXT
+  if (accepts_video)
+#endif
     {
       modevar = grub_env_get ("gfxpayload");
       if (! modevar || *modevar == 0)
@@ -105,8 +107,10 @@ grub_multiboot_set_video_mode (void)
 	  grub_free (tmp);
 	}
     }
+#if GRUB_MACHINE_HAS_VGA_TEXT
   else
     err = grub_video_set_mode ("text", 0, 0);
+#endif
 
   return err;
 }
